// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MDRenderer > Basic markdown features > Emphasis > renders bold text with double asterisks 1`] = `"<p><strong>bold</strong></p>"`;

exports[`MDRenderer > Basic markdown features > Emphasis > renders bold text with double underscores 1`] = `"<p><strong>bold</strong></p>"`;

exports[`MDRenderer > Basic markdown features > Emphasis > renders emphasis within paragraph 1`] = `"<p>This is <em>italic</em> and <strong>bold</strong> text.</p>"`;

exports[`MDRenderer > Basic markdown features > Emphasis > renders italic text with asterisks 1`] = `"<p><em>italic</em></p>"`;

exports[`MDRenderer > Basic markdown features > Emphasis > renders italic text with underscores 1`] = `"<p><em>italic</em></p>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders ATX heading 1 1`] = `"<h1>Heading 1</h1>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders ATX heading 2 1`] = `"<h2>Heading 2</h2>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders ATX heading 3 1`] = `"<h3>Heading 3</h3>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders ATX heading 4 1`] = `"<h4>Heading 4</h4>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders ATX heading 5 1`] = `"<h5>Heading 5</h5>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders ATX heading 6 1`] = `"<h6>Heading 6</h6>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders Setext heading 1 1`] = `"<h1>Heading 1</h1>"`;

exports[`MDRenderer > Basic markdown features > Headers > renders Setext heading 2 1`] = `"<h2>Heading 2</h2>"`;

exports[`MDRenderer > Basic markdown features > Paragraphs > renders a simple paragraph 1`] = `"<p>This is a paragraph.</p>"`;

exports[`MDRenderer > Basic markdown features > Paragraphs > renders multiple paragraphs 1`] = `"<p>First paragraph.</p><p>Second paragraph.</p>"`;

exports[`MDRenderer > Basic markdown features > Strikethrough > renders strikethrough text 1`] = `"<p><del>strikethrough</del></p>"`;

exports[`MDRenderer > Basic markdown features > Strikethrough > renders strikethrough within paragraph 1`] = `"<p>This is <del>deleted</del> text.</p>"`;

exports[`MDRenderer > Blockquotes and horizontal rules > Blockquotes > renders blockquote 1`] = `"<blockquote style="padding-left: 16px; margin: 8px 0px;"><span>This is a blockquote.</span></blockquote>"`;

exports[`MDRenderer > Blockquotes and horizontal rules > Blockquotes > renders multi-line blockquote 1`] = `
"<blockquote style="padding-left: 16px; margin: 8px 0px;"><span>First line
 Second line</span></blockquote>"
`;

exports[`MDRenderer > Blockquotes and horizontal rules > Horizontal rules > renders horizontal rule with asterisks 1`] = `"<hr style="margin: 16px 0px;">"`;

exports[`MDRenderer > Blockquotes and horizontal rules > Horizontal rules > renders horizontal rule with dashes 1`] = `"<hr style="margin: 16px 0px;">"`;

exports[`MDRenderer > Blockquotes and horizontal rules > Horizontal rules > renders horizontal rule with underscores 1`] = `"<hr style="margin: 16px 0px;">"`;

exports[`MDRenderer > Code blocks and inline code > Code blocks > renders fenced code block 1`] = `
"<pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>const x = 1;
console.log(x);</code></pre>"
`;

exports[`MDRenderer > Code blocks and inline code > Code blocks > renders fenced code block with language 1`] = `
"<pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>const x = 1;
console.log(x);</code></pre>"
`;

exports[`MDRenderer > Code blocks and inline code > Code blocks > renders indented code block 1`] = `
"<pre style="margin: 8px 0px;"><code>const x = 1;
    console.log(x);</code></pre>"
`;

exports[`MDRenderer > Code blocks and inline code > Inline code > renders inline code 1`] = `"<p><code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">code</code></p>"`;

exports[`MDRenderer > Code blocks and inline code > Inline code > renders inline code within paragraph 1`] = `"<p>Use <code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">console.log()</code> to debug.</p>"`;

exports[`MDRenderer > Custom renderers > allows chaining of custom renderers 1`] = `"<p><b class="custom-bold">**Bold**</b> and <i class="custom-italic">*italic*</i> text</p>"`;

exports[`MDRenderer > Custom renderers > allows custom emphasis renderer 1`] = `"<p>This is <span class="custom-italic">*custom italic*</span> text</p>"`;

exports[`MDRenderer > Custom renderers > allows custom link renderer with additional attributes 1`] = `"<p><a href="#" class="custom-link" data-original="[Original Link](https://example.com)">Custom Link</a></p>"`;

exports[`MDRenderer > Custom renderers > allows custom paragraph renderer 1`] = `"<div class="custom-paragraph">Test paragraph</div>"`;

exports[`MDRenderer > Custom renderers > falls back to default renderer when custom not provided 1`] = `"<h1>Header</h1>"`;

exports[`MDRenderer > Links and images > Images > renders image 1`] = `"<p><img src="image.jpg" alt="Alt text"></p>"`;

exports[`MDRenderer > Links and images > Links > renders autolink 1`] = `"<p><a target="_blank" rel="noopener noreferrer" href="https://example.com">https://example.com</a></p>"`;

exports[`MDRenderer > Links and images > Links > renders inline link 1`] = `"<p><a target="_blank" rel="noopener noreferrer" href="https://example.com">Example.comhttps://example.com</a></p>"`;

exports[`MDRenderer > Lists > Ordered lists > renders ordered list 1`] = `"<ol><li> <span>First item</span></li><li> <span>Second item</span></li><li> <span>Third item</span></li></ol>"`;

exports[`MDRenderer > Lists > Ordered lists > renders ordered list with different starting numbers 1`] = `"<ol><li> <span>Fifth item</span></li><li> <span>Sixth item</span></li><li> <span>Seventh item</span></li></ol>"`;

exports[`MDRenderer > Lists > Unordered lists > renders bullet list with asterisks 1`] = `"<ul><li> <span>Item 1</span></li><li> <span>Item 2</span></li><li> <span>Item 3</span></li></ul>"`;

exports[`MDRenderer > Lists > Unordered lists > renders bullet list with dashes 1`] = `"<ul><li> <span>Item 1</span></li><li> <span>Item 2</span></li><li> <span>Item 3</span></li></ul>"`;

exports[`MDRenderer > Lists > Unordered lists > renders bullet list with plus signs 1`] = `"<ul><li> <span>Item 1</span></li><li> <span>Item 2</span></li><li> <span>Item 3</span></li></ul>"`;

exports[`MDRenderer > Nested and complex scenarios > Blockquotes > renders blockquotes with emphasis and links 1`] = `"<blockquote style="padding-left: 16px; margin: 8px 0px;"><span>This is a <strong>bold</strong> statement with <a target="_blank" rel="noopener noreferrer" href="https://example.com">a linkhttps://example.com</a></span><span>And this is <em>italic</em> text in the same blockquote</span></blockquote>"`;

exports[`MDRenderer > Nested and complex scenarios > Blockquotes > renders blockquotes with lists 1`] = `"<blockquote style="padding-left: 16px; margin: 8px 0px;"><span>This blockquote contains a list:</span><ol><li> <span>First item</span></li><li> <span>Second item</span></li><li> <span>Third item</span></li></ol></blockquote>"`;

exports[`MDRenderer > Nested and complex scenarios > Blockquotes > renders nested blockquotes 1`] = `"<blockquote style="padding-left: 16px; margin: 8px 0px;"><span>This is a blockquote</span><blockquote style="padding-left: 16px; margin: 8px 0px;"><span>This is a nested blockquote</span><blockquote style="padding-left: 16px; margin: 8px 0px;"><span>And this is triple nested</span></blockquote></blockquote></blockquote>"`;

exports[`MDRenderer > Nested and complex scenarios > Code in various contexts > renders code blocks in blockquotes 1`] = `
"<blockquote style="padding-left: 16px; margin: 8px 0px;"><span>Here's an example:</span><pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>&gt; function hello() {
&gt;   return "world";
&gt; }
&gt; \`\`\`</code></pre></blockquote>"
`;

exports[`MDRenderer > Nested and complex scenarios > Code in various contexts > renders code blocks in lists 1`] = `
"<ol><li> <span>Install dependencies:</span>
   <pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>   npm install
   \`\`\`</code></pre></li><li> <span>Run the application:</span>
   <pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>   npm start
   \`\`\`</code></pre></li></ol>"
`;

exports[`MDRenderer > Nested and complex scenarios > Code in various contexts > renders inline code with emphasis markers that should not be processed 1`] = `"<p><code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">const **bold** = 'not bold';</code></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles code blocks without closing 1`] = `"<pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>const x = 1;</code></pre>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles consecutive italic emphasis correctly 1`] = `"<p><em>This is</em> nested <em>italic</em></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles consecutive same emphasis types correctly 1`] = `"<p><strong>This is</strong> nested <strong>bold</strong></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles empty code blocks 1`] = `"<pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>\`\`\`</code></pre>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles empty table cells 1`] = `"<table style="border-collapse: collapse; margin: 8px 0px; width: 100%;"><thead><tr><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Col1</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Col2</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Col3</th></tr></thead><tbody><tr><td style="padding: 6px 12px; text-align: left;">Data</td><td style="padding: 6px 12px; text-align: left;">More</td></tr><tr><td style="padding: 6px 12px; text-align: left;">Data</td></tr></tbody></table>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles images without src 1`] = `"<p><img src="#" alt="Alt text"></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles links without URLs 1`] = `"<p><a target="_blank" rel="noopener noreferrer" href="#">Link text</a></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles proper separated emphasis correctly 1`] = `"<p><strong>this</strong> is <strong>bold</strong></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles triple asterisk emphasis correctly 1`] = `"<p><em><strong>This is</strong></em> nested <em><strong>bold italic</strong></em></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Edge cases and malformed content > handles unbalanced emphasis markers 1`] = `"<p>This has *<em>unbalanced bold and <em>mixed emphasis</em></em></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Links and images in various contexts > renders code within links 1`] = `"<p><a target="_blank" rel="noopener noreferrer" href="https://developer.mozilla.org">Check out <code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">console.log()</code>https://developer.mozilla.org</a></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Links and images in various contexts > renders images within links 1`] = `"<p><a target="_blank" rel="noopener noreferrer" href="https://example.com"><img src="image.jpg" alt="Alt text">https://example.com</a></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Links and images in various contexts > renders links in lists 1`] = `"<ul><li> <span><a target="_blank" rel="noopener noreferrer" href="https://example.com">Link 1https://example.com</a></span></li><li> <span>Visit <a target="_blank" rel="noopener noreferrer" href="https://google.com">Googlehttps://google.com</a> for search</span></li><li> <span>Multiple <a target="_blank" rel="noopener noreferrer" href="https://a.com">linkshttps://a.com</a> in <a target="_blank" rel="noopener noreferrer" href="https://b.com">onehttps://b.com</a> item</span></li></ul>"`;

exports[`MDRenderer > Nested and complex scenarios > Links and images in various contexts > renders links with emphasis 1`] = `"<p><a target="_blank" rel="noopener noreferrer" href="https://example.com"><strong>Bold link</strong>https://example.com</a> and <a target="_blank" rel="noopener noreferrer" href="https://test.com"><em>italic link</em>https://test.com</a></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Mixed content scenarios > renders complex document with all features 1`] = `
"<h1>Main Title</h1><p>This is a <strong>complex document</strong> with <em>various</em> elements.</p><h2>Features</h2><ol><li> <span><strong>Lists</strong> with nested items:</span>
   <ul><li> <span>Unordered nested list</span></li><li> <span>Another item with <code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">inline code</code></span></li></ul></li><li> <span><strong>Code blocks</strong> with different languages:</span>
   <pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>   function example() {
     return "Hello World";
   }
   \`\`\`</code></pre></li><li> <span><strong>Tables</strong> with complex content</span></li></ol><h2>Quotes and More</h2><blockquote style="padding-left: 16px; margin: 8px 0px;"><span>This is a blockquote with <strong>emphasis</strong> and a <a target="_blank" rel="noopener noreferrer" href="https://test.com">linkhttps://test.com</a>.</span><blockquote style="padding-left: 16px; margin: 8px 0px;"><span>Nested quote with <code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">code</code></span></blockquote></blockquote><hr style="margin: 16px 0px;"><h3>Final Notes</h3><p>Check out this image: <img src="test.jpg" alt="Example"></p><p>And this autolink: <a target="_blank" rel="noopener noreferrer" href="https://automatic.link">https://automatic.link</a></p>"
`;

exports[`MDRenderer > Nested and complex scenarios > Mixed content scenarios > renders edge case with consecutive emphasis 1`] = `"<p>This has <strong>bold</strong> and <strong>more bold</strong> and <em>italic</em> and <em>more italic</em> text.</p>"`;

exports[`MDRenderer > Nested and complex scenarios > Mixed content scenarios > renders emphasis across line breaks 1`] = `
"<p>This is <strong>bold text that
continues on the next line</strong></p>"
`;

exports[`MDRenderer > Nested and complex scenarios > Nested emphasis > renders bold within italic 1`] = `"<p><em>This is italic with <strong>bold</strong> inside</em></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Nested emphasis > renders complex nested emphasis combinations 1`] = `"<p><em><strong>This is bold and italic</strong></em> with <del>strikethrough <strong>and bold</strong></del></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Nested emphasis > renders italic within bold 1`] = `"<p><strong>This is bold with <em>italic</em> inside</strong></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Nested emphasis > renders strikethrough with nested emphasis 1`] = `"<p><del>This is deleted with <strong>bold</strong> and <em>italic</em> text</del></p>"`;

exports[`MDRenderer > Nested and complex scenarios > Nested lists > renders deeply nested unordered lists 1`] = `
"<ul><li> <span>Level 1</span>
  <ul><li> <span>Level 2</span>
    <ul><li> <span>Level 3</span>
      <ul><li> <span>Level 4</span></li></ul></li></ul></li></ul></li></ul>"
`;

exports[`MDRenderer > Nested and complex scenarios > Nested lists > renders lists with multiple paragraphs in items 1`] = `
"<ol><li> <span>First item with multiple paragraphs.</span>

   <span>This is the second paragraph of the first item.</span></li><li> <span>Second item with code:</span>

   <pre style="padding: 8px; border-radius: 4px; margin: 8px 0px;"><code>   console.log('Hello from list');
   \`\`\`</code></pre></li></ol>"
`;

exports[`MDRenderer > Nested and complex scenarios > Nested lists > renders mixed nested lists (ordered and unordered) 1`] = `
"<ol><li> <span>First ordered item</span>
   <ul><li> <span>Nested unordered item</span></li><li> <span>Another nested item</span></li></ul></li><li> <span>Second ordered item</span>
   <ol><li> <span>Nested ordered item</span></li><li> <span>Another nested ordered item</span></li></ol></li></ol>"
`;

exports[`MDRenderer > Nested and complex scenarios > Tables with complex content > renders standalone table correctly 1`] = `"<table style="border-collapse: collapse; margin: 8px 0px; width: 100%;"><thead><tr><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Name</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Age</th></tr></thead><tbody><tr><td style="padding: 6px 12px; text-align: left;">John</td><td style="padding: 6px 12px; text-align: left;">30</td></tr><tr><td style="padding: 6px 12px; text-align: left;">Jane</td><td style="padding: 6px 12px; text-align: left;">25</td></tr></tbody></table>"`;

exports[`MDRenderer > Nested and complex scenarios > Tables with complex content > renders tables with emphasis and links 1`] = `"<table style="border-collapse: collapse; margin: 8px 0px; width: 100%;"><thead><tr><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Name</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Description</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Link</th></tr></thead><tbody><tr><td style="padding: 6px 12px; text-align: left;"><strong>Bold Name</strong></td><td style="padding: 6px 12px; text-align: left;"><em>Italic description</em></td><td style="padding: 6px 12px; text-align: left;"><a target="_blank" rel="noopener noreferrer" href="https://example.com">Visithttps://example.com</a></td></tr><tr><td style="padding: 6px 12px; text-align: left;"><del>Deprecated</del></td><td style="padding: 6px 12px; text-align: left;"><code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">code example</code></td><td style="padding: 6px 12px; text-align: left;"><a target="_blank" rel="noopener noreferrer" href="https://github.com">GitHubhttps://github.com</a></td></tr></tbody></table>"`;

exports[`MDRenderer > Nested and complex scenarios > Tables with complex content > renders tables with images 1`] = `"<table style="border-collapse: collapse; margin: 8px 0px; width: 100%;"><thead><tr><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Icon</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Name</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Description</th></tr></thead><tbody><tr><td style="padding: 6px 12px; text-align: left;"><img src="icon.png" alt="Icon"></td><td style="padding: 6px 12px; text-align: left;">Project</td><td style="padding: 6px 12px; text-align: left;">Main project</td></tr><tr><td style="padding: 6px 12px; text-align: left;"><img src="logo.svg" alt="Logo"></td><td style="padding: 6px 12px; text-align: left;">Brand</td><td style="padding: 6px 12px; text-align: left;">Company brand</td></tr></tbody></table>"`;

exports[`MDRenderer > Nested and complex scenarios > Task lists and checkboxes > renders nested task lists 1`] = `
"<ul><li> <span><a target="_blank" rel="noopener noreferrer" href="#">x</a> Main task</span>
  <ul><li> <span><a target="_blank" rel="noopener noreferrer" href="#">x</a> Subtask 1</span></li><li> <span>[ ] Subtask 2</span>
    <ul><li> <span><a target="_blank" rel="noopener noreferrer" href="#">x</a> Sub-subtask</span></li></ul></li></ul></li></ul>"
`;

exports[`MDRenderer > Nested and complex scenarios > Task lists and checkboxes > renders task lists with checkboxes 1`] = `"<ul><li> <span><a target="_blank" rel="noopener noreferrer" href="#">x</a> Completed task</span></li><li> <span>[ ] Incomplete task</span></li><li> <span><a target="_blank" rel="noopener noreferrer" href="#">x</a> Another completed task</span></li></ul>"`;

exports[`MDRenderer > Special syntax > Escapes > handles backslash escapes 1`] = `"<p>*not italic*</p>"`;

exports[`MDRenderer > Special syntax > Escapes > handles escaped characters 1`] = `"<p># Not a header</p>"`;

exports[`MDRenderer > Special syntax > HTML entities > handles HTML entities 1`] = `"<p>&amp; &lt; &gt;</p>"`;

exports[`MDRenderer > Special syntax > HTML entities > handles special entities 1`] = `"<p>© ™</p>"`;

exports[`MDRenderer > Special syntax > Line breaks > handles hard line breaks 1`] = `"<p>Line one<br>Line two</p>"`;

exports[`MDRenderer > Special syntax > Line breaks > handles soft line breaks 1`] = `
"<p>Line one
Line two</p>"
`;

exports[`MDRenderer > Special syntax > Mixed content > handles complex nested markdown 1`] = `"<h1>Header</h1><p>This is a <strong>bold</strong> paragraph with <em>italic</em> text and <code style="padding: 2px 4px; border-radius: 3px; font-family: monospace;">code</code>.</p><ul><li> <span>List item with <a target="_blank" rel="noopener noreferrer" href="https://example.com">linkhttps://example.com</a></span></li><li> <span>Another item</span></li></ul><blockquote style="padding-left: 16px; margin: 8px 0px;"><span>Blockquote with <strong>emphasis</strong></span></blockquote>"`;

exports[`MDRenderer > Tables > renders simple table 1`] = `"<table style="border-collapse: collapse; margin: 8px 0px; width: 100%;"><thead><tr><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Name</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Age</th></tr></thead><tbody><tr><td style="padding: 6px 12px; text-align: left;">John</td><td style="padding: 6px 12px; text-align: left;">30</td></tr><tr><td style="padding: 6px 12px; text-align: left;">Jane</td><td style="padding: 6px 12px; text-align: left;">25</td></tr></tbody></table>"`;

exports[`MDRenderer > Tables > renders table with alignment 1`] = `"<table style="border-collapse: collapse; margin: 8px 0px; width: 100%;"><thead><tr><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Left</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Center</th><th style="padding: 6px 12px; font-weight: bold; text-align: left;">Right</th></tr></thead><tbody><tr><td style="padding: 6px 12px; text-align: left;">L1</td><td style="padding: 6px 12px; text-align: left;">C1</td><td style="padding: 6px 12px; text-align: left;">R1</td></tr></tbody></table>"`;
